--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -76,11 +76,11 @@
 <p><span class="badge badge-light">Canada Italy</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/riv/1a6b7326-7209-4b37-b473-b3dc6cfb59f4'>Rival - iOS Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/riv/1a6b7326-7209-4b37-b473-b3dc6cfb59f4'>Rival - iOS Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/letgo/jobs/1765705'>Job Application for iOS Engineer at letgo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/letgo/jobs/1765705'>Job Application for iOS Engineer at letgo</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -89,7 +89,7 @@
 <p>17. Juli 2019 ... NEUGELB Studios has a job opening for DevOps Engineer (m/w/d) in Frankfurt (
 published: 18.07.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999692187708-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999692187708-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -137,7 +137,7 @@ and at?...</p>
 <p><span class="badge badge-light">Sao Paulo Brazil</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wunder/jobs/1764847'>Job Application for iOS Engineer at Wunder</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wunder/jobs/1764847'>Job Application for iOS Engineer at Wunder</a></h5> 
 <p><span class="badge badge-light">Hamburg San Francisco Tokyo</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -145,11 +145,11 @@ and at?...</p>
 <p><span class="badge badge-light">San Francisco, CA Seattle, WA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/medmen/jobs/4290268002'>Job Application for Principal iOS Engineer at MedMen</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/medmen/jobs/4290268002'>Job Application for Principal iOS Engineer at MedMen</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://garmin-cluj.workable.com/j/3599BE3746'>Garmin Cluj - Jobs: iOS Software Engineer - Apply online</a></h5> 
+<h5><a href='https://garmin-cluj.workable.com/j/3599BE3746'>Garmin Cluj - Jobs: iOS Software Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Cluj-Napoca, Cluj County, Romania</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -169,7 +169,7 @@ and at?...</p>
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692057558-sr-ios-engineer-for-global-sportswear-co-'>Aroghia Group Sr. iOS Engineer for Global Sportswear Co. | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692057558-sr-ios-engineer-for-global-sportswear-co-'>Aroghia Group Sr. iOS Engineer for Global Sportswear Co. | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -209,7 +209,7 @@ project?...</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syone2.recruitee.com/o/ref4712019-ios-engineer'>
+<h5><a href='https://syone2.recruitee.com/o/ref4712019-ios-engineer'>
       (Ref.471/2019) - iOS Engineer - Syone
     </a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
@@ -227,7 +227,7 @@ project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/frontapp/5505992a-afea-421e-bb7d-ebe48d0ba13a'>Front - iOS Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/frontapp/5505992a-afea-421e-bb7d-ebe48d0ba13a'>Front - iOS Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -256,11 +256,11 @@ project?...</p>
 <p>Jul 2, 2019 ... Join our dedicated technology team that builds massively scalable systems, 
 designs low latency architecture solutions and leverages machine learning?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://keywords-intl1.workable.com/j/626DE0F008'>Keywords Studios - Jobs: Service Line Operations Director - Engineering - Apply online</a></h5> 
+<h5><a href='https://keywords-intl1.workable.com/j/626DE0F008'>Keywords Studios - Jobs: Service Line Operations Director - Engineering - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://keywords-intl1.workable.com/j/9F9A8A210B'>Keywords Studios - Jobs: Service Line Operations Director - Engineering - Apply online</a></h5> 
+<h5><a href='https://keywords-intl1.workable.com/j/9F9A8A210B'>Keywords Studios - Jobs: Service Line Operations Director - Engineering - Apply online</a></h5> 
 <p><span class="badge badge-light">Dublin, County Dublin, Ireland</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -288,7 +288,7 @@ designs low latency architecture solutions and leverages machine learning?...</p
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/houzz/20a564b1-3c40-4483-9409-c608bc20055a'>Houzz - Junior iOS Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/houzz/20a564b1-3c40-4483-9409-c608bc20055a'>Houzz - Junior iOS Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -296,7 +296,7 @@ designs low latency architecture solutions and leverages machine learning?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/revenuecat/c8e94ab8-ead4-416d-83f7-fcaaba7ce527'>RevenueCat - iOS SDK Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/revenuecat/c8e94ab8-ead4-416d-83f7-fcaaba7ce527'>RevenueCat - iOS SDK Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -320,7 +320,7 @@ designs low latency architecture solutions and leverages machine learning?...</p
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lifesum.teamtailor.com/jobs/252635-junior-ios-engineer-growth-team?editor=true'>Junior iOS Engineer - Growth Team - Lifesum</a></h5> 
+<h5><a href='https://lifesum.teamtailor.com/jobs/252635-junior-ios-engineer-growth-team?editor=true'>Junior iOS Engineer - Growth Team - Lifesum</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 2, 2019 ... We are improving lives through better eating and we are doing this through 
 software that is highly personalized for our user's needs. By tapping into mobil.</p>
@@ -341,7 +341,7 @@ software that is highly personalized for our user's needs. By tapping into mobil
 <p><span class="badge badge-light">Moscow London</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://xbird.recruitee.com/o/senior-ios-engineer'>Senior iOS Engineer - xbird</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://xbird.recruitee.com/o/senior-ios-engineer'>Senior iOS Engineer - xbird</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 30, 2019 ... Our technology captures data streams from the built-in sensors in smartphones 
 and wearables, and translates these into activities and behavioural patterns.</p>
@@ -408,13 +408,13 @@ they love. Our product combines data science, software engineering and UX?...</p
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syone2.recruitee.com/o/ref-4142019-ios-engineer'>
+<h5><a href='https://syone2.recruitee.com/o/ref-4142019-ios-engineer'>
       (Ref. 414/2019) - iOS Engineer - Syone
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/unusual/ea1dc60f-9773-4a76-85b3-1ea9207a1628'>Unusual Ventures - Lead iOS Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/unusual/ea1dc60f-9773-4a76-85b3-1ea9207a1628'>Unusual Ventures - Lead iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
